--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
+    <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 
 <body>
     <header>
         <h1>Flappy Bird</h1>
     </header>
-    <canvas id="canvas" width="288" height="512"></canvas>
+    <canvas id="canvas"></canvas>
+    <script src="src/config.js"></script>
+    <script src="src/entities/base.js"></script>
+    <script src="src/entities/bird.js"></script>
+    <script src="src/drawEngine.js"></script>
+    <script src="src/physicsEngines.js"></script>
+    <script src="src/inputHandlers.js"></script>
+    <script src="src/resources.js"></script>
+    <script src="src/game.js"></script>
+    <script src="index.js"></script>
+
 </body>
 
 </html>
